--- a/style.css
+++ b/style.css
@@ -20,6 +20,25 @@ body::-webkit-scrollbar {
   width: 0;
 }
 
+body::-webkit-scrollbar {
+  width: 15px;
+}
+
+body::-webkit-scrollbar-track {
+  background-color: #191818;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #ad5e18;
+  border-radius: 8px;
+  border:  3px solid #191818;
+}
+
+body::-webkit-scrollbar-thumb:hover {
+  background: #d97722;
+}
+
+
 /* ================================================================================================== */
 
 .container {
@@ -705,3 +724,122 @@ body::-webkit-scrollbar {
 .kitchener__img-01 {
   margin-right: 30px;
 }
+
+/* ================================================================================================== */
+
+footer {
+  background-color: #1d1d1d;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.footer__container {
+  max-width: 1110px;
+  width: 100%;
+  margin: 0 auto;
+}
+
+.footer__logo{
+  max-width: 100px;
+}
+
+.footer__colums {
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
+}
+
+.footer__colum {
+  display: flex;
+  flex-direction: column;
+  gap: 18px;
+  font-size: 15px;
+  line-height: 22px;
+}
+
+.footer__colum a {
+  color: #e9e9e9;
+}
+
+li {
+  list-style: none;
+}
+
+.footer__title {
+  margin: 0;
+  font-size: 18px;
+}
+
+.footer__list {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  margin: 0;
+  padding: 0;
+}
+
+.footer__item a {
+  color: #e9e9e9;
+}
+
+/* footer h4 {
+  color: #e9e9e9;
+} */
+
+.footer__icons {
+  display: flex;
+  gap: 10px;
+}
+
+.footer__icon {
+  border-radius: 50px;
+  background-color: #2a2a2a;
+  width: 40px;
+  height: 40px;
+  transition: all 0.3s ease 0s;
+}
+
+.footer__icon:hover {
+  background-color: #d97722;
+}
+
+.footer__line {
+  width: 100%;
+  height: 1px;
+  background-color: #4b4b4b;
+  /* margin-top: 15px; */
+  margin-bottom: 15px;
+  position: relative;
+}
+
+.footer__line::before {
+  content: " ";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 10px;
+  height: 100%;
+  background: rgb(29,29,29);
+  background: linear-gradient(90deg, rgba(29,29,29,1) 0%, rgba(75,75,75,1) 100%);
+}
+
+.footer__line::after {
+  content: " ";
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 10px;
+  height: 100%;
+  background: rgb(75,75,75);
+  background: linear-gradient(90deg, rgba(75,75,75,1) 0%, rgba(29,29,29,1) 100%);
+}
+
+.footer__icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+
+
+
